--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -1982,12 +1982,17 @@ main {
 
 .before\:bg-hero-image-light::before {
   content: var(--tw-content);
-  background-image: linear-gradient(to bottom, rgba(56, 75, 82, .5), rgb(56, 75, 82) 99%), url('./src/assets/hero/heroBg.webp');
+  background-image: linear-gradient(to bottom, rgba(56, 75, 82, .5), rgb(56, 75, 82) 99%), url('./src/assets/hero/planetBG.webp');
 }
 
 .before\:bg-cover::before {
   content: var(--tw-content);
   background-size: cover;
+}
+
+.before\:bg-center::before {
+  content: var(--tw-content);
+  background-position: center;
 }
 
 .before\:bg-no-repeat::before {
